<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/menu_news_feed" />

    <item
        android:id="@+id/navigation_members"
        android:icon="@drawable/ic_members"
        android:title="@string/menu_members" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/menu_messages" />
    <item
        android:id="@+id/navigation_tt"
        android:icon="@drawable/ic_tt"
        android:title="@string/menu_think_tank" />
    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_events"
        android:title="@string/menu_evemts"
        />

</menu>
